2004-11-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/fifo2.c: Added special case for attempts to build on
	threaded tcl 8.2. This version doesn't support Tcl_MutexFinalize
	and we would leak mutexes from fifo2. Provided error stub
	functions and included a #error so that anyone attempting to build
	under these conditions will know what the problem is.

	* generic/null.c:        Fix for compilation with tcl 8.2 and above.
	* generic/random.c:
	* generic/zero.c:
	* generic/memchanInt.h:

2004-11-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/memchan.h:          Added a stubs library for the Memchan
	* generic/memchan.decls:      extension. This exposes an API that
	* generic/memchanDecls.h:     permits C extensions to create Memchan
	* generic/memchanStubInit.c:  channels directly.
	* generic/memchanStubLib.c:
	
	* generic/chantest.c:     Sample extension for testing the stubs
	                          linking C API.
	
	* doc/manpage.css:        Added the tcllib style-sheet.

	* generic/memchan.c:      Modified in support of the stubs API. 
	* generic/fifo.c:         Each channel creation command now uses
	* generic/fifo2.c:        the C API internally. Channel creation code
	* generic/null.c:         moved to a function exposed on the Memchan
	* generic/zero.c:         stubs interface.
	* generic/random.c:
	* generic/buf.decls:
	* generic/bufStubInit.c:

	* win/makefile.vc:        Windows build files updated
	* win/rules.vc:
	* configure.in:           TEA files updated with new version.
	* configure:

	==== Incremented version to 2.2.1 ====
	
2004-08-04  Pat Thoyts  <pat@zsplat.freeserve.co.uk>

	* generic/fifo2.c: Applied fix for bug #996078 which sets the channel
	                   mutex to NULL in threaded tcl (Jeff Gilbertson)

2004-06-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* configure:        Updated and regenerated the TEA configure script
	* tclconfig/tcl.m4: This now works with Msys on Windows (gcc & cl)
